feat(student): complete multi-batch migration with Enrollment as sole source of truth
- Drop students.batch_id column and foreign key constraints via Flyway migration V5
- Backfill active enrollments for students with assigned batches
- Remove batch field and getters/setters from Student entity and DTOs
- Update EnrollmentRepository with active student and batch query methods
- Enforce COUNT(DISTINCT e.student.id) for batch capacity calculations
- Update batch student removal to soft-deactivate enrollment instead of dangling batch_id = null
- Refactor all 18 dependent modules (Attendance, Analytics, Assignments, Reports, Dashboard, Notifications, Announcements, Meeting Links, Quizzes, Placement) to query EnrollmentRepository
- Update CourseAccessGuard and BatchScheduleConflictValidator for multi-batch concurrency
- Update frontend Admin Students list and detail pages to display multi-batch/course rosters and remove single batch assumptions
- Add comprehensive multi-batch enrollment tests and PostgreSQL migration verification test suite